am refactorizat partea de UI- fxml sa functioneze si pe monitoare de laptop